--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@radix-ui/react-tooltip": "^1.1.7",
     "@react-email/components": "^0.0.32",
     "@tanstack/react-query": "^5.64.2",
-    "@types/bcrypt": "^5.0.2",
-    "bcrypt": "^5.1.1",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "better-auth": "^1.1.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
