--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "export:email": "email export"
   },
   "dependencies": {
+    "@ferrucc-io/emoji-picker": "^0.0.41",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@paralleldrive/cuid2": "^2.2.2",
@@ -33,6 +34,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "emoji-picker-react": "^4.12.0",
     "lucide-react": "^0.473.0",
     "next": "15.1.5",
     "next-safe-action": "^7.10.2",
