--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
+    "@radix-ui/react-visually-hidden": "^1.1.1",
     "@react-email/components": "^0.0.32",
     "@tanstack/react-query": "^5.64.2",
     "@types/bcryptjs": "^2.4.6",
