--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "@react-email/components": "^0.0.32",
     "@tanstack/react-query": "^5.64.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/fabric": "^5.3.9",
     "bcryptjs": "^2.4.3",
     "better-auth": "^1.1.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "emoji-picker-react": "^4.12.0",
+    "fabric": "^6.5.4",
     "lucide-react": "^0.473.0",
     "next": "15.1.5",
     "next-safe-action": "^7.10.2",
