--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "export:email": "email export"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "@ferrucc-io/emoji-picker": "^0.0.41",
+    "@hello-pangea/dnd": "^17.0.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@paralleldrive/cuid2": "^2.2.2",
