--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "resend": "^4.1.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
