configured socket.io

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "bun run src/index.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -37,9 +37,11 @@
     "@types/fabric": "^5.3.9",
     "bcryptjs": "^2.4.3",
     "better-auth": "^1.1.14",
+    "chalk": "^5.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "consola": "^3.4.0",
     "emoji-picker-react": "^4.12.0",
     "fabric": "^6.5.4",
     "lucide-react": "^0.473.0",
