--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "resend": "^4.1.1",
+    "server-only": "^0.0.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.7.2",
